# autosail

./: .gitignore  .gitmodules  README.md  setupScript.bash  setup_script.sh
Documentation/Control/GANTT/: autosail-software.gan  autosail.gan
Documentation/Control/WBS/: 1-software.puml  2-hardware.puml  3-administrative.puml  3-dependable.puml  4-Dependable.puml  4-administrative.puml  4-dependable.puml  wbs.puml
Documentation/Manual/: SOF-11-Manual-Data-Logging.md  SOF-12-Manual-Ctrl-Shutdown.md  SOF-14-Manual-Data-Visualization  SOF.09-Manual-Global-LAN.md  SOF.10-Manual-ROS2-BI-DIR-COM.md  SOF.10-Manual-ROS2-Discovery-Server.md
Documentation/Manual/.devcontainer/: devcontainer.json
Documentation/Manual/SOF.09/: ZeroTier configuration - Teltonika Networks Wiki.html
Documentation/Manual/SOF.10/: ROS 2 - Fast-DDS Discovery Server.html
Documentation/Thesis-Autosail-HT2021/: main.tex  references.bib  thesisMDH.cls
Documentation/Thesis-Autosail-HT2021/sections/: 000-guideline.tex  abstract.tex  background.tex  conclusions.tex  contribs.tex  discussion.tex  etics.tex  introduction.tex  method.tex  relatedWork.tex  results.tex
GPS/: CMakeLists.txt  README.md  sdkconfig
GPS/components/nmea/: nmea.c
GPS/components/protocol/: protocol.c
GPS/main/: main.c
GPS_mros_test/components/nmea/: nmea.c
GPS_mros_test/components/protocol/: protocol.c
GPS_mros_test/main/: main.c  main.h
MPU6050_serial/: CMakeLists.txt
MPU6050_serial/main/: example.cpp
RMC/: app.c  readme.md
ROS2/: boat_launch.py
ROS2/SAMPLE_FUNCTIONS/: publisher.cpp  subscriber.cpp
ROS2/Testing/gps_test_validation/: README.md
ROS2/Testing/rosbag2_MPU6050_serial/: rosbag2_2021_11_19-07_48_06_0.db3
ROS2/Testing/rosbag2_combined_and_SF/: rosbag2_2021_12_07-09_56_53_0.db3  rosbag2_2021_12_07-09_56_53_0.db3-shm  rosbag2_2021_12_07-09_56_53_0.db3-wal
ROS2/Testing/rosbag2_vessel_orientation/: metadata.yaml  rosbag2_2021_11_17-15_30_25_0.db3
ROS2/Testing/rosbag2_vessel_velocity/: metadata.yaml
ROS2/data_logging/: .bash_history  record.launch.py  record_all.launch.xml  record_critical.launch.xml  record_critical_data.launch.xml  record_data.py  select_critical_topics.txt  select_topics.txt  test_select.py
ROS2/install/: local_setup.sh  setup.sh
ROS2/log/: latest_build
ROS2/rudder_path/: CMakeLists.txt  README.md
ROS2/rudder_path/src/: publisher.cpp  rudder_path_pid.cpp  subscriber.cpp
ROS2/rudder_path_pid/rudder_path/: CMakeLists.txt
ROS2/rudder_path_pid/rudder_pid/: CMakeLists.txt  package.xml
ROS2/sensor_fusion/: README.md  package.xml  setup.cfg
ROS2/sensor_fusion/sensor_fusion/: extended_kalman_filter.py  main.py  main.txt
ROS2/sensor_malfunction/: CMakeLists.txt  README.md  package.xml
ROS2/sensor_malfunction/launch/: malfunction_launch.py
ROS2/sensor_malfunction/scripts/: shutdown.py
ROS2/sensor_malfunction/src/: if_error.cpp  if_error.txt
ROS2/shutdown/: package.xml  setup.py
ROS2/shutdown/shutdown/: main.py
ROS2/sig_shutdown/sig_shutdown/: main.py
ROS2/test_sub/: CMakeLists.txt  package.xml
ROS2/test_sub/src/: approx_2sub_pub.cpp  exact_2sub_pub.cpp
ROS2/vessel_velocity/: README.md
ROS2/vessel_velocity/src/: sub_pos_gps.cpp
ROS2/visualisation/: requirements.txt
ROS2/visualisation/subplots/: No multiprocessing backup.py  main.py
ROS2/wind_to_sail/: README.md  package.xml
ROS2/wind_to_sail/src/: publisher.cpp  subscriber.cpp
bag_files/rosbag2_gps_moving_test/: metadata.yaml
bag_files/rosbag2_gps_static_test/: metadata.yaml
bags/rosbag2_MPU6050_serial/: metadata.yaml
docs/: SOF-11-Manual-Data-Logging.md  SOF.09-Manual-Global-LAN.md
docs/SOF.09/ZeroTier configuration - Teltonika Networks Wiki_files/: css.css  gtm_005.js  gtm_006.js  load.php  load_002.css
gps_test_validation/: README.md
gps_test_validation/bag_files/rosbag2_gps_moving_test/: rosbag2_2021_11_10-13_32_57_0.db3
gps_test_validation/bag_files/rosbag2_gps_static_test/: rosbag2_2021_11_10-10_24_45_0.db3
gps_test_validation/gps_validation/: package.xml
gps_test_validation/gps_validation/src/: subscriber_member_function.cpp
install/: local_setup.sh  setup.sh
log/: latest_build
main/: example.cpp
micro-ROS/RMC/: readme.md
micro-ROS/Sensors/: README.md
micro-ROS/Sensors/GPS/: app.c  main.c
micro-ROS/Sensors/combined_MCU/: CMakeLists.txt  sdkconfig.defaults
micro-ROS/Sensors/gps/: README.md  app.c  readme.md
micro-ROS/Sensors/gps_wind/: README.md  app.c
micro-ROS/Sensors/sensor_reading/: CMakeLists.txt  README.md
micro-ROS/apps/gps/: README.md  (+1 more)
micro-ROS/motor_control/: CMakeLists.txt  app.c  readme.md
ny_MROS_GPS_funkar/: app.c
orientation/: sdkconfig
orientation/main/: example.cpp
ros/: README.md  boat_launch.py
ros/SAMPLE_FUNCTIONS/: sub_pub.cpp
ros/rudder_path/: README.md
ros/src/: README.md  boat_launch.py
ros/src/rudder_path/: README.md  package.xml
ros/src/rudder_path/src/: rudder_path_pid.cpp
ros/visualisation/: package.xml
sensor_fusion/sensor_fusion/: extended_kalman_filter.py  main.py
shutdown/: setup.cfg
shutdown/shutdown/: main.py
src/apps/: README.md
src/autosail_message/: CMakeLists.txt  README.md  package.xml
src/pkgs/: README.md
test/sublisher/: CMakeLists.txt  package.xml
velocity/: CMakeLists.txt  package.xml
velocity/src/: sub_pos_gps.cpp
vessel_orientation/: README.md
vessel_orientation/main/: main.cpp
vessel_velocity/: CMakeLists.txt  README.md
vessel_velocity/src/: sub_pos_gps.cpp
wind_direction/wind_direction_ros2/: app.c
wind_to_sail/: wind_to_sail.cpp
wind_to_sail/ROS2/wind_to_sail/: CMakeLists.txt  README.md
wind_to_sail/ROS2/wind_to_sail/src/: publisher.cpp  sail.hpp  sub_pub.cpp  subscriber.cpp
wind_to_sail/SAIL/: CMakeLists.txt  runMe.sh
(+1458 files in other folders)
